--- a/jose2007kj/src/main/AndroidManifest.xml
+++ b/jose2007kj/src/main/AndroidManifest.xml
@@ -35,5 +35,7 @@
             </intent-filter>
         </activity>
     </application>
+    <uses-permission android:name="android.permission.CALL_PHONE"></uses-permission>
+
 
 </manifest>
