--- a/jose2007kj/src/main/AndroidManifest.xml
+++ b/jose2007kj/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.jose2007kj.learningandroid.jose2007kj">
 
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <application>
         <activity android:name=".MainActivity">
             <intent-filter android:order="1">
@@ -34,8 +36,19 @@
                     android:scheme="https" />
             </intent-filter>
         </activity>
-    </application>
-    <uses-permission android:name="android.permission.CALL_PHONE"></uses-permission>
+        <activity android:name=".Dashboard">
+            <intent-filter android:order="1">
+                <action android:name="android.intent.action.VIEW" />
 
+                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data
+                    android:host="jose2007kj.example.com"
+                    android:pathPattern="/.*"
+                    android:scheme="https" />
+            </intent-filter>
+        </activity>
+    </application>
 
 </manifest>
