--- a/jose2007kj/src/main/AndroidManifest.xml
+++ b/jose2007kj/src/main/AndroidManifest.xml
@@ -4,7 +4,10 @@
 
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <application>
+    <application
+        android:largeHeap="true"
+        >
+
         <activity android:name=".MainActivity">
             <intent-filter android:order="1">
                 <action android:name="android.intent.action.VIEW" />
