--- a/base/build.gradle
+++ b/base/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     api 'com.android.support:appcompat-v7:27.1.1'
     api 'com.android.support.constraint:constraint-layout:1.1.2'
     api 'com.android.support:support-v4:27.1.1'
+    api 'com.android.support:support-vector-drawable:27.1.1'
     application project(':app')
     feature project(':jose2007kj')
 }
